# elect

./: Cargo.toml
agent/: Cargo.toml  Design.md
agent/src/: history.rs  main.rs  registration.rs  state.rs  vote.rs
agent/src/ui/: registration.rs  voting.rs
ballot/: Cargo.toml
ballot/src/: lib.rs
bbox/: Cargo.toml
protocol/: Cargo.toml  messages.capnp
protocol/src/: cast.rs  lib.rs  registration.rs  sync.rs
roll/: Cargo.toml
roll/src/: main.rs
