[package]
name = "agent"
version = "0.1.0"
authors = ["LeakyBucket <DamnBigMan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ballot = { path = "../ballot" }
protocol = { path = "../protocol" }
sodiumoxide = "0.2.5"
druid = "0.6.0"
