[package]
name = "ballot"
version = "0.1.0"
authors = ["LeakyBucket <DamnBigMan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = "1.0.111"
serde_json = "1.0.55"
serde_derive = "1.0.111"
chrono = { version = "0.4.11", features = ["serde"] }
sodiumoxide = "0.2.5"
