[package]
name = "protocol"
version = "0.1.0"
authors = ["LeakyBucket <DamnBigMan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ballot = { path = "../ballot" }
flexbuffers = "0.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sodiumoxide = "0.2.5"
serde = "1.0.114"
serde_derive = "1.0.114"
